# BookGPT

./: CODE_OF_CONDUCT.md  LICENSE  README.md  book.py  config.json  pyproject.toml  requirements.txt  run.py  setup.cfg  setup.py
book_types/: nonfiction.py
bookgpt.egg-info/: PKG-INFO  SOURCES.txt
books/: Achieving_Success.txt  Colonizing_Mars.txt  Exploring_Mars.txt  The_Path_to_Success.txt  ~$crates.txt
examples/biography/: The_Rise_of_Elon_Musk.md
examples/history/: The_Evolution_of_Artificial_Intelligence.md
examples/nonfiction/: the_path_to_succes.md
examples/quote/: the_path_to_succes.md
examples/science/: Exploring_the_Final_Frontier.md  Exploring_the_Possibilities_of_Mars_Colonization.md  Living_Beyond_Earth.md  Unlocking_the_Power_of_Photovoltaics.md
examples/self-improvement/: Fitness_Revolution.md  Sleep_Your_Way_to_Success.md  Unleash_Your_Inner_Strength.md
examples/selfhelp/: Fitness_Revolution.md  Sleep_Your_Way_to_Success.md  Unleash_Your_Inner_Strength.md
examples/travel/: Exploring_Germany.md
src/: app.py  book.py  config.json  prompts.py  run.py  types.csv
src/bookgpt.egg-info/: PKG-INFO  requires.txt
src/categories/: __init__.py  biography.py  history.py  nonfiction.py  science.py  selfhelp.py  selfimprovement.py  travel.py
src/utils/: __init__.py  save.py  utils.py
utils/: save.py  utils.py
