[metadata]
name = BookGPT
version = 0.6.2.1
author = Mika Vehns
author_email = mika.vehns@outlook.com
description = Book generator using GPT-3
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mikavehns/BookGPT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
include_package_data = False